--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,3 +1,4 @@
+
 name: Python autotests
 
 on:
@@ -9,82 +10,79 @@ on:
         type: choice
         default: smoke
         options:
-          - smoke
-          - regression
-          - extended
           - all
-          
+
 permissions:
   contents: read
   pages: write
-  id-token: write         
+  id-token: write
 
 jobs:
   run-tests:
     runs-on: ubuntu-latest
     name: Run autotests
-    steps: 
+    steps:
       - name: Checkout autotests
         uses: actions/checkout@v4
       - name: Set up Python environment
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
          python-version: '3.10'
       - name: Install dependencies.
-        run: pip install -r requirements.txt  
+        run: pip install -r requirements.txt
 
       - name: Install Playwright
-        run: playwright install   
-        
+        run: playwright install
+
       - name: run all tests
         if: "github.event.inputs.deployment_target == 'all'"
         run: pytest --alluredir=allure-results
         continue-on-error: true
-        
+
       - name: run smoke tests
         if: "github.event.inputs.deployment_target == 'smoke'"
         run: pytest -m smoke --alluredir=allure-results
         continue-on-error: true
-        
+
       - name: run regression tests
         if: "github.event.inputs.deployment_target == 'regression'"
-        run: pytest -m regression --alluredir=allure-results 
+        run: pytest -m regression --alluredir=allure-results
         continue-on-error: true
-        
+
       - name: run extended tests
-        if: "github.event.inputs.deployment_target == 'extended'" 
+        if: "github.event.inputs.deployment_target == 'extended'"
         run: pytest -m extended --alluredir=allure-results
         continue-on-error: true
 
       - name: Install Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'microsoft'
           java-version: '17'
-          
+
       - name: Install Allure
         run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.30.0/allure-2.30.0.tgz && sudo tar -zxvf allure-2.30.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.30.0/bin/allure /usr/bin/allure
       - name: Generate report
-        run: allure generate -c allure-results -o _site
-        
+        run: allure generate -c negative_test_koshelek/allure-results -o _site
+
       - name: Save allure report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: _site
           path: _site
-          retention-days: 1 
-          
+          retention-days: 1
+
   publish-report:
     name: Report publication
     runs-on: ubuntu-latest
     needs: run-tests
     steps:
       - name: Download artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
       - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1.2.9
-        
-  
+        uses: actions/deploy-pages@v4
+
+
