--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
-playwright==1.38.0
-pytest==7.4.0
-pytest-playwright==0.3.0
-allure-pytest==2.13.1
+playwright==1.46.0
+pytest==8.3.2
+pytest-playwright==0.5.2
+pytest-base-url==2.1.0
+pytest-cov==4.1.0
+pytest-html==3.2.0
+pytest-metadata==3.1.1
+pytest-xdist==3.6.1
+allure-pytest==2.13.5
+allure-python-commons==2.13.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+urllib3==1.26.19
+virtualenv==20.26.3
+websocket-client==1.8.0
+typing_extensions==4.12.2
