--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,88 +1,107 @@
-
 name: Python autotests
 
 on:
   workflow_dispatch:
     inputs:
       deployment_target:
-        description: choose tests set
+        description: Choose tests set
         required: true
         type: choice
         default: smoke
         options:
           - all
-          
+          - smoke
+          - regression
+          - extended
+
 permissions:
   contents: read
   pages: write
-  id-token: write         
+  id-token: write
 
 jobs:
   run-tests:
     runs-on: ubuntu-latest
     name: Run autotests
-    steps: 
-      - name: Checkout autotests
+    steps:
+      - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Set up Python environment
+
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-         python-version: '3.10'
-      - name: Install dependencies.
-        run: pip install -r requirements.txt  
+          python-version: '3.10'
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: ${{ runner.os }}-pip-
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
       - name: Install Playwright
-        run: playwright install   
-        
-      - name: run all tests
-        if: "github.event.inputs.deployment_target == 'all'"
+        run: playwright install
+
+      - name: Run ALL tests
+        if: ${{ github.event.inputs.deployment_target == 'all' }}
         run: pytest --alluredir=allure-results
         continue-on-error: true
-        
-      - name: run smoke tests
-        if: "github.event.inputs.deployment_target == 'smoke'"
+
+      - name: Run SMOKE tests
+        if: ${{ github.event.inputs.deployment_target == 'smoke' }}
         run: pytest -m smoke --alluredir=allure-results
         continue-on-error: true
-        
-      - name: run regression tests
-        if: "github.event.inputs.deployment_target == 'regression'"
-        run: pytest -m regression --alluredir=allure-results 
+
+      - name: Run REGRESSION tests
+        if: ${{ github.event.inputs.deployment_target == 'regression' }}
+        run: pytest -m regression --alluredir=allure-results
         continue-on-error: true
-        
-      - name: run extended tests
-        if: "github.event.inputs.deployment_target == 'extended'" 
+
+      - name: Run EXTENDED tests
+        if: ${{ github.event.inputs.deployment_target == 'extended' }}
         run: pytest -m extended --alluredir=allure-results
         continue-on-error: true
 
-      - name: Install Java
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: 'microsoft'
           java-version: '17'
-          
-      - name: Install Allure
-        run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.30.0/allure-2.30.0.tgz && sudo tar -zxvf allure-2.30.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.30.0/bin/allure /usr/bin/allure
-      - name: Generate report
-        run: allure generate -c negative_test_koshelek/allure-results -o _site
-        
-      - name: Save allure report
+
+      - name: Set up Allure
+        uses: simple-elf/allure-report-action@v1.9
+        with:
+          allure-version: 2.30.0
+
+      - name: Generate Allure report
+        run: allure generate -c allure-results -o _site
+
+      - name: Add .nojekyll file
+        run: echo "" > _site/.nojekyll
+
+      - name: Upload Allure report artifact
         uses: actions/upload-artifact@v4
         with:
           name: _site
           path: _site
-          retention-days: 1 
-          
+          retention-days: 1
+
   publish-report:
     name: Report publication
     runs-on: ubuntu-latest
     needs: run-tests
     steps:
-      - name: Download artifacts
+      - name: Download report artifact
         uses: actions/download-artifact@v4
+        with:
+          name: _site
+
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        
-  
