--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,28 +1,3 @@
-name: Python autotests
-
-on:
-  workflow_dispatch:
-    inputs:
-      deployment_target:
-        description: Choose tests set
-        required: true
-        type: choice
-        default: smoke
-        options:
-          - all
-          - smoke
-          - regression
-          - extended
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-jobs:
-  run-tests:
-    runs-on: ubuntu-latest
-    name: Run autotests
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -39,7 +14,7 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: ${{ runner.os }}-pip-
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: pip install -r requirements.txt
 
       - name: Install Playwright
@@ -65,43 +40,29 @@ jobs:
         run: pytest -m extended --alluredir=allure-results
         continue-on-error: true
 
-      - name: Set up Java
+      - name: Set up Java for Allure
         uses: actions/setup-java@v4
         with:
           distribution: 'microsoft'
           java-version: '17'
 
-      - name: Set up Allure
+      - name: Set up Allure CLI
         uses: simple-elf/allure-report-action@v1.9
         with:
           allure-version: 2.30.0
 
+      - name: Check Allure version
+        run: allure --version
+
       - name: Generate Allure report
         run: allure generate -c allure-results -o _site
 
-      - name: Add .nojekyll file
+      - name: Add .nojekyll to allow underscore folders on GitHub Pages
         run: echo "" > _site/.nojekyll
 
-      - name: Upload Allure report artifact
+      - name: Upload Allure report as artifact
         uses: actions/upload-artifact@v4
         with:
           name: _site
           path: _site
           retention-days: 1
-
-  publish-report:
-    name: Report publication
-    runs-on: ubuntu-latest
-    needs: run-tests
-    steps:
-      - name: Download report artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: _site
-
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
