--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,68 +1,88 @@
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
 
-      - name: Set up Python
+name: Python autotests
+
+on:
+  workflow_dispatch:
+    inputs:
+      deployment_target:
+        description: choose tests set
+        required: true
+        type: choice
+        default: smoke
+        options:
+          - all
+          
+permissions:
+  contents: read
+  pages: write
+  id-token: write         
+
+jobs:
+  run-tests:
+    runs-on: ubuntu-latest
+    name: Run autotests
+    steps: 
+      - name: Checkout autotests
+        uses: actions/checkout@v4
+      - name: Set up Python environment
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-
-      - name: Cache pip dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: ${{ runner.os }}-pip-
-
-      - name: Install Python dependencies
-        run: pip install -r requirements.txt
+         python-version: '3.10'
+      - name: Install dependencies.
+        run: pip install -r requirements.txt  
 
       - name: Install Playwright
-        run: playwright install
-
-      - name: Run ALL tests
-        if: ${{ github.event.inputs.deployment_target == 'all' }}
+        run: playwright install   
+        
+      - name: run all tests
+        if: "github.event.inputs.deployment_target == 'all'"
         run: pytest --alluredir=allure-results
         continue-on-error: true
-
-      - name: Run SMOKE tests
-        if: ${{ github.event.inputs.deployment_target == 'smoke' }}
+        
+      - name: run smoke tests
+        if: "github.event.inputs.deployment_target == 'smoke'"
         run: pytest -m smoke --alluredir=allure-results
         continue-on-error: true
-
-      - name: Run REGRESSION tests
-        if: ${{ github.event.inputs.deployment_target == 'regression' }}
-        run: pytest -m regression --alluredir=allure-results
+        
+      - name: run regression tests
+        if: "github.event.inputs.deployment_target == 'regression'"
+        run: pytest -m regression --alluredir=allure-results 
         continue-on-error: true
-
-      - name: Run EXTENDED tests
-        if: ${{ github.event.inputs.deployment_target == 'extended' }}
+        
+      - name: run extended tests
+        if: "github.event.inputs.deployment_target == 'extended'" 
         run: pytest -m extended --alluredir=allure-results
         continue-on-error: true
 
-      - name: Set up Java for Allure
+      - name: Install Java
         uses: actions/setup-java@v4
         with:
           distribution: 'microsoft'
           java-version: '17'
-
-      - name: Set up Allure CLI
-        uses: simple-elf/allure-report-action@v1.9
-        with:
-          allure-version: 2.30.0
-
-      - name: Check Allure version
-        run: allure --version
-
-      - name: Generate Allure report
-        run: allure generate -c allure-results -o _site
-
-      - name: Add .nojekyll to allow underscore folders on GitHub Pages
-        run: echo "" > _site/.nojekyll
-
-      - name: Upload Allure report as artifact
+          
+      - name: Install Allure
+        run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.30.0/allure-2.30.0.tgz && sudo tar -zxvf allure-2.30.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.30.0/bin/allure /usr/bin/allure
+      - name: Generate report
+        run: allure generate -c negative_test_koshelek/allure-results -o _site
+        
+      - name: Save allure report
         uses: actions/upload-artifact@v4
         with:
           name: _site
           path: _site
-          retention-days: 1
+          retention-days: 1 
+          
+  publish-report:
+    name: Report publication
+    runs-on: ubuntu-latest
+    needs: run-tests
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+        
+  
